--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,11 @@ body {
 
 .small{
 	height: 200px;
-	margin: 0 10%;
+	margin: 0 5%;
+}
+
+.text-right{
+    text-align: right;
 }
 
 .right-offset
