--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #F7F4F0;
 }
-
+/*
 #section-1 {
   background-image: url('/assets/images/wellington_at_dawn.png');
   -webkit-background-size: cover;
@@ -9,11 +9,11 @@ body {
   -o-background-size: cover;
   background-size: cover;
   opacity: 0.7;
-  filter: alpha(opacity = 40); /* For IE */
+  filter: alpha(opacity = 40);
 }
-
+*/
 .select-area {
-  height: 4rem;
+  /* height: 4rem; */
   width: 100%;
   padding: 0rem 2rem;
   font-size: 1.5rem;
@@ -63,3 +63,16 @@ body {
 }
 }
 
+div.leaflet-control-attribution {
+    display: none;
+}
+
+#continue_button {
+    position: absolute;
+    padding: 20px;
+    bottom: 20px;
+    left: 50%;
+    margin-left: -50px;
+    background-color: #ffffff;
+    z-index: 2000;
+}
