--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
 body {
   background-color: #F7F4F0;
 }
-/*
-#section-1 {
-  background-image: url('/assets/images/wellington_at_dawn.png');
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  opacity: 0.7;
-  filter: alpha(opacity = 40);
+
+#roll-the-dice-button {
+  height: 3rem;
+  text-align: center;
 }
-*/
+
+#roll-the-dice-button > img {
+  height: 100%;
+}
+
 .select-area {
   /* height: 4rem; */
   width: 100%;
@@ -28,6 +27,10 @@ body {
 
 .center {
   margin: 0 auto;
+}
+
+.presentation-icon {
+  width: 80%;
 }
 
 @media (max-width: 35.5em) {
