--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   background-size: cover;
   opacity: 0.7;
   filter: alpha(opacity = 40); /* For IE */
-
+}
 
 #roll-the-dice-button {
   height: 3rem;
